--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch backend/index.ts",
+     "seed": "node --loader ts-node/esm backend/scripts/seed.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
+    "csv-writer": "^1.6.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
